--- a/.gitignore
+++ b/.gitignore
@@ -113,8 +113,27 @@ venv.bak/
 # Versioning
 version.py
 
+# Configs
+*.list
+.htpasswd
+
+# Certificate files
+*.pem
+*.crt
+*.csr
+*.ext
+*.key
+*.srl
+
 # Backup files
 *.bak
 
 # Local backup dir
+_backupfiles
 .backupfiles
+
+# Python debugger config
+.pdbrc
+
+# auto generated API docs
+docs/source/autoapi
