tox - install package

--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@ skip_missing_interpreters = true
 #: Activate isolated build environment - PEP-517/518.
 isolated_build = true
 #: Application -> true; Library -> false
-skipsdist = true
+skipsdist = false
 
 envlist =
     pre-commit
