--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,7 +21,7 @@ resources:
 
 variables:
   PYTEST_ADDOPTS: "-v -v -ra --showlocals"
-  PYTEST_XDIST_PROC_NR: '0'
+  PYTEST_XDIST_N: '0'
 
 jobs:
   - template: jobs/run-tox.yml@cielquan
@@ -51,4 +51,4 @@ jobs:
           display_name: docs_test_doctest
       coverage:
         with_toxenv: 'coverage'
-        for_envs: [py37, py36, py38, py39, pypy3]
+        for_envs: [py36, py37, py38, py39, pypy3]
