remove py39 and pypy3 on win/macos from pipeline bacause vispy/numpy installation fails

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,9 +36,7 @@ jobs:
           os: [linux, windows, macOs]
         py38:
           os: [linux, windows, macOs]
-        py39: null
-        pypy3:
-          os: [linux, windows, macOs]
+        pypy3: null
         package:
           os: [linux, windows, macOs]
         docs-test-html:
